<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/background_for_dialog"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.03"
        android:text="@string/sorting_and_filtering"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sort_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by"
        android:textColor="@color/iris_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_label" />

    <RadioGroup
        android:id="@+id/sort_by_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter_by_price"
        android:textColor="@color/iris_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_radio_group" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/price_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_label">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/from"
            android:textColor="@color/iris_blue"
            android:textSize="12sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_from_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="20$" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/price_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_label">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/to"
            android:textColor="@color/iris_blue"
            android:textSize="12sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_to_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="50$" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:labelBehavior="gone"
        app:trackColorInactive="#385E8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_from"
        app:thumbColor="@color/iris_blue"
        app:trackColorActive="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/iris_blue"
        android:paddingHorizontal="36dp"
        android:text="@string/apply"
        android:textColor="@color/prussian_blue"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_slider" />
</androidx.constraintlayout.widget.ConstraintLayout>